# M8r

./: Cargo.toml  HARDWARE.md  README.md  config.toml  setup-vcan.sh
src/: config.rs  gauge.rs  main.rs
src/gauge/: dial.rs  mod.rs  textgauge.rs
