[package]
name = "m8r"
version = "0.1.0"
authors = ["Niklas Hansen <nha@3floor.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
socketcan = "1.7"
tokio-socketcan = "0.3.0"
futures = "0.3"
futures-util = "0.3.14"
