[package]
name = "m8r"
version = "0.1.0"
authors = ["Niklas Hansen <nha@3floor.dk>"]
edition = "2018"

[features]
colors = []
default = ["colors"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketcan = "1.7"
embedded-graphics = "0.7.0"
embedded-graphics-simulator = "0.3.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
half = "1.7.1"
